# WIPP-EGT-plugin

./: .gitignore  CMakeLists.txt  CommandLineCli.cpp  GenerateSegmentedImage.cpp  GenerateThresholdedSegmentedDenoisedImage.cpp  GenerateThresholdedSegmentedImage.cpp  OpenCV.cpp  README.md  main.cpp  wipp-egt-plugin.json
cmake-modules/: FindFastImage.cmake  FindHTGS.cmake  FindNVTX.cmake
docs/: .blob-disappears-exec.txt.swp  NOTES.txt  benchmarks-notes.md  blob-disappears-exec.txt  blob-ok.txt  command line args  debug-diff.txt  debug.md  debug.txt  debug2-diff.txt  debug2.md  dist.md  poster.txt  results.txt
scripts/: startTest1.sh  startTest2.sh
src/egt/FeatureCollection/: ConnectedComponents.h  Feature.h
src/egt/FeatureCollection/Data/: Blob.h  BlobSet.h  BoundingBox.h  CompactBlob.h  Feature.h  ListBlobs.h  ListFeatures.h  ViewAnalyse.h  ViewAnalyzeBlock.h  ViewOrViewAnalyse.h  ViewPair.h
src/egt/FeatureCollection/Tasks/: BlobMerger.h  ConvOutDataAnalyzer.h  EGTGradientViewAnalyzer.h  EGTViewAnalyzer.h  FeatureBuilder.h  FeatureCollection.h  MergeBlob.h  MergeHole.h  SegmentationOptions.h  ViewAnalyseFilter.h  ViewAnalyser.h  ViewAnalyzeBlock.h  ViewFilter.h
src/egt/FeatureCollection/algorithms/: bitmaskAlgorithms.h
src/egt/FeatureCollection/tools/: AABBTree.h  EfficientAABBTree.h  UnionFind.h
src/egt/api/: CommandLineCli.h  DataTypes.h  DerivedSegmentationParams.h  EGT.h  EGTOptions.h  EGTRun.h  SegmentationOptions.h
src/egt/data/: ConvOutData.h  ConvOutMemoryData.h  GradientView.h  Threshold.h  ThresholdOrView.h
src/egt/loaders/: FeatureBitmaskLoader.h  PyramidTiledTiffLoader.h
src/egt/memory/: ReleaseMemoryRule.h  TileAllocator.h
src/egt/rules/: MergeCompletedRule.h  MergeRule.h
src/egt/tasks/: ConvTask.h  CustomSobelFilter3by3.h  EGTSobelFilter.h  FCCustomSobelFilter3by3.h  FCSobelFilterOpenCV.h  FastThresholdFinder.h  MedianBlurFilter.h  NoTransform.h  OpenCVConvTask.h  SobelFilterOpenCV.h  ThresholdFinder.h  Thresholder.h  TiffTileWriter.h  TileTiffWriter.h  ViewToConvOutDataConverter.h
src/egt/utils/: Bitmask.h  FeatureExtraction.h  PixelIntensityBoundsFinder.h  UnionFind.h  Utils.h
src/egt/utils/pyramid/: Pyramid.h  RecursiveBlockTraversal.h
test/: CMakeLists.txt  bitmaskTileLoaderTest.cpp  featureCollectionTest.cpp  thresholdFinder.cpp  thresholdFinderTest.cpp
test/all_tests/: CMakeLists.txt  FastThresholdFinderTest.h  bitmaskTileLoaderTest.h  runAllTests.cpp
test/old_tests/: CMakeLists.txt  featureCollectionTest.cpp  thresholdFinderFromGradientTest.cpp
